# diesel_full_text_search

./: Cargo.toml
src/: lib.rs
