[package]
name = "diesel_full_text_search"
version = "1.2.0"
authors = ["Sean Griffin <sean@seantheprogrammer.com>", "Oscar Rainford <oscar@fourbs.net>"]
description = "Adds support for PostgreSQL full text search to Diesel"
license = "MIT"
repository = "https://github.com/fourbs-net/diesel_full_text_search"

[dependencies]
diesel = { version = "2.0.0", features = ["postgres"] }

[patch.crates-io]
diesel = { git = 'https://github.com/diesel-rs/diesel.git', rev = 'c0b6130' }
